# sol

./: .gitignore  Cargo.toml
src/: cell.rs  common.rs  common.wgsl  data.rs  debug.rs  engine.rs  game.rs  main.rs  main.wgsl  object.rs  wgpu_utilities.rs
src/application/: application.rs  events.rs  mod.rs
src/debug/: debug.rs  mod.rs
src/engine/: simulation.rs
src/engine/rendering/: camera.rs
src/engine/simulation/: cell.rs  material.rs  simulation.rs  simulation.wgsl
src/partition/: bounds.rs  bounds.wgsl  grid.rs  grid.wgsl  mod.rs  spatial_partitioner.rs  spatial_partitioner.wgsl
src/profiling/: mod.rs  profiling.rs
src/simulation/: simulation.rs  simulation.wgsl
src/visualisation/: camera.rs  mod.rs  visualisation.rs  visualisation.wgsl
