[package]
name = "sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
bytemuck = "1.16.0"

winit = "0.28.7"
wgpu = "0.16.3"

encase = { version = "0.8.0", features = ["glam"] }
glam = "0.27.0"
include-wgsl-oil = { version = "0.2.5", features = ["glam", "encase"] }
